force-app/main/default/objects/VI_JonctionChoixOffre_Compte__c/VI_JonctionChoixOffre_Compte__c.object-meta.xml
<CustomObject>
    <label>Jonction Choix offre Compte</label>
    <nameField>
        <displayFormat>JCoC-{000000}</displayFormat>
        <label>Jonction Choix offre Compte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jonctions Choix offres Comptes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>