force-app/main/default/objects/VI_JonctionChoixOffre_Compte__c/fields/Partenaire__c.field-meta.xml
<CustomField>
    <fullName>Partenaire__c</fullName>
    <label>Partenaire</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Merci de sélectionner un compte partenaire.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partenaire</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Choix offres</relationshipLabel>
    <relationshipName>Jonctions_Choix_offres_Comptes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>