force-app/main/default/objects/VI_JonctionChoixOffre_Compte__c/fields/VI_ChoixOffre__c.field-meta.xml
<CustomField>
    <fullName>VI_ChoixOffre__c</fullName>
    <label>Choix offre</label>
    <referenceTo>Choix_Offre__c</referenceTo>
    <relationshipLabel>Partenaires</relationshipLabel>
    <relationshipName>Jonctions_Choix_offres_Comptes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>