force-app/main/default/objects/VI_JonctionChoixOffre_Compte__c/fields/VI_TECHConcatIDs__c.field-meta.xml
<CustomField>
    <fullName>VI_TECHConcatIDs__c</fullName>
    <externalId>true</externalId>
    <label>TECH Concat IDs</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>